2010-11-10  Michael Albinus  <michael.albinus@gmx.de>

	* vc-clearcase.el (clearcase-dir-status-collect, vc-clearcase-diff):
	Do not use `kill-line' or `kill-region', they trash the kill ring.

2010-11-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-known-vobs)
	(clearcase-view-info-for-path-cache): new variables
	(clearcase-view-info-for-path, clearcase-view-tag-for-path)
	(clearcase-vob-tag-for-path, clearcase-view-root-for-path): new
	functions
	(clearcase-setup-vprop): use `clearcase-view-root-for-path'
	(vc-clearcase-responsible-p): we are responsible for a file if we
	can find a vob tag for it (fixes Bug #8)
	(vc-clearcase-root): use `clearcase-view-root-for-path'

2010-10-26  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* ucm.el (ucm-actb-visit-item-command): open the file using the
	full path, instead of the directory name.

2010-09-02  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-dir-status-parse-line): ignore backup
	files

2010-08-31  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-annotate-post-process): bugfix: don't
	replace short revision strings with nil

2010-08-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-root): return nil (instead of
	signalling an error) if FILE is not inside ClearCase.

2010-08-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	Patch by Kai Tetzlaff <kai.tetzlaff@web.de>

	Deduce the fileset in the vtree browser

	* vc-clearcase.el (vc-clearcase-gui-vtree-browser): use
	`vc-deduce-fileset' to obtain the file(s) on which to start the
	version tree browser.

2010-08-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	Patch by Kai Tetzlaff <kai.tetzlaff@web.de>

	Add the view-tag and vob-tag to the vc-dir listing.

	* vc-clearcase.el (clearcase-view-tag-for-path)
	(clearcase-dir-format-extra-header)
	(vc-clearcase-dir-extra-headers): new functions.

2010-08-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>
